ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-tour-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.devops-tour.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: api
              port:
                number: 80
    - host: devops-tour.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend
              port:
                number: 80
